--- a/index.html
+++ b/index.html
@@ -9,15 +9,15 @@
 <body>
     <main>
         <header>
-            <h1>Título do site</h1>
+            <h1>Cursos Grátis</h1>
         </header>
         <article>
-            <h2>Artigo 001</h2>
-            <p>Texto Artigo 001</p>
+            <h2>Curso de HTML5 com CSS3</h2>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Modi qui, ullam quos nesciunt ipsam perferendis id dolor asperiores sed quibusdam sint, quae placeat, consectetur iure totam quam impedit quia obcaecati?</p>
         </article>
         <article>
-            <h2>Artigo 002</h2>
-            <p>Texto Artigo 002</p>
+            <h2>Cursos de JavaScript</h2>
+            <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Nostrum rem quidem dolore autem magnam! Iste temporibus nam soluta quod, quo necessitatibus vitae dignissimos ducimus. Quo atque fugiat magni enim provident.</p>
         </article>
     </main>
     
