--- a/index.html
+++ b/index.html
@@ -11,14 +11,19 @@
     <main>
         <header>
             <h1>Cursos Grátis</h1>
+            <img src="imagens/curso-em-video-cor.png" alt="Curso em Vídeo">
         </header>
         <article>
             <h2>Curso de HTML5 com CSS3</h2>
+            <img class="lado" src="imagens/curso-html-css.png" alt="Curso HTML">
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Modi qui, ullam quos nesciunt ipsam perferendis id dolor asperiores sed quibusdam sint, quae placeat, consectetur iure totam quam impedit quia obcaecati?</p>
+            <p><a href="curso-html.html">Acesse o curso de HTML5</a></p>
         </article>
         <article>
             <h2>Cursos de JavaScript</h2>
+            <img class="lado" src="imagens/curso-javascript.png" alt="Curso JS">
             <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Nostrum rem quidem dolore autem magnam! Iste temporibus nam soluta quod, quo necessitatibus vitae dignissimos ducimus. Quo atque fugiat magni enim provident.</p>
+            <p><a href="curso-js.html">Acesse o curso de JavaScript</a></p>
         </article>
     </main>
     
